[package]
name = "crafty_novels_cli"
version = "0.1.0"
keywords = ["cli", "parser", "html", "minecraft"]
categories = ["command-line-utilities", "parser-implementations"]
description = "A command-line utility for converting Minecraft books to HTML"

authors.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
edition.workspace = true
publish.workspace = true

[dependencies]
crafty_novels = { version = "0.1.0", path = ".." }
